--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flagg</title>
 </head>
+    <body>
+    <h1 style= "text-align: center">Tyskland</h1>
+    <p style="
+    border-top-style: solid;
+    border-left-style: solid;
+    border-right-style: solid;
+    background-color: #000;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+    height: 50px;">&nbsp;</p>
 </html>
-jeg
-hei
-lol
