--- a/index.html
+++ b/index.html
@@ -19,4 +19,13 @@
     margin-right: auto;
     width: 300px;
     height: 50px;">&nbsp;</p>
+         <p style="background-color: #FF0000;
+    border-left-style: solid;
+    border-right-style: solid;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+    height: 50px;">&nbsp;</p>
 </html>
