--- a/index.html
+++ b/index.html
@@ -28,4 +28,18 @@
     margin-right: auto;
     width: 300px;
     height: 50px;">&nbsp;</p>
+    
+     <p style="background-color: #FFCC00;
+    border-left-style: solid;
+    border-right-style: solid;
+    border-bottom-style: solid;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+    height: 50px;">&nbsp;</p>
+</body>
+
+
 </html>
