--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
     margin-right: auto;
     width: 300px;
     height: 50px;">&nbsp;</p>
-</body>
+<style>
 
+p {
+  box-shadow: 5px 10px 18px #888888;
+  }
+
+</style>
+
+  </body>
 
 </html>
+
