--- a/index.html
+++ b/index.html
@@ -39,6 +39,25 @@
     margin-right: auto;
     width: 300px;
     height: 50px;">&nbsp;</p>
+
+<div>
+  <h2 style="text-align: center;">Colombia</h2>
+  <p style="background-color: #fcd116; width: 300px; margin: 0 auto; height: 100px; border-top-style: solid; border-left-style: solid; border-right-style: solid;">&nbsp;</p>
+  <p style="background-color: #003893; width: 300px; margin: 0 auto; height: 50px; border-right-style: solid; border-left-style: solid;">&nbsp;</p>
+  <p style="background-color: #ce1126; width: 300px; margin: 0 auto; height: 50px; border-bottom-style: solid; border-left-style: solid; border-right-style: solid;">&nbsp;</p>
+  <p style="margin-bottom: auto;">
+  </div>
+
+  <style>
+      p {
+      box-shadow: 5px 10px 18px #111
+      }
+
+  </style>
+
+</body>
+</html>
+
 <style>
 
 p {
