--- a/index.html
+++ b/index.html
@@ -1,63 +1,20 @@
 <!DOCTYPE html>
-<html lang="no-NB">
+<html lang="no">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flagg</title>
+<meta charset="utf-8">
 </head>
-    <body>
-    <h1 style= "text-align: center">Tyskland</h1>
-    <p style="
-    border-top-style: solid;
-    border-left-style: solid;
-    border-right-style: solid;
-    background-color: #000;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
-    width: 300px;
-    height: 50px;">&nbsp;</p>
-         <p style="background-color: #FF0000;
-    border-left-style: solid;
-    border-right-style: solid;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
-    width: 300px;
-    height: 50px;">&nbsp;</p>
 
-    
-     <p style="background-color: #FFCC00;
-    border-left-style: solid;
-    border-right-style: solid;
-    border-bottom-style: solid;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
-    width: 300px;
-    height: 50px;">&nbsp;</p>
+<body>
 
-<div>
-  <h2 style="text-align: center;">Colombia</h2>
-  <p style="background-color: #fcd116; width: 300px; margin: 0 auto; height: 100px; border-top-style: solid; border-left-style: solid; border-right-style: solid;">&nbsp;</p>
-  <p style="background-color: #003893; width: 300px; margin: 0 auto; height: 50px; border-right-style: solid; border-left-style: solid;">&nbsp;</p>
-  <p style="background-color: #ce1126; width: 300px; margin: 0 auto; height: 50px; border-bottom-style: solid; border-left-style: solid; border-right-style: solid;">&nbsp;</p>
-  <p style="margin-bottom: auto;">
-  </div>
+<h1>Flagg-oppgave</h1>
 
-  <style>
-      p {
-      box-shadow: 5px 10px 18px #111
-      }
-
-  </style>
+     <ul>
+         <li><a href="canvasflagg.html">CANVAS-flagg</a></li>
+         <li><a href="cssflagg.html">CSS-flagg</a></li>
+         <li><a href="pflagg.html">P-flagg</a></li>
+     </ul>
 
 
-  </body>
 
+</body>
 </html>
-
